--- a/index.html
+++ b/index.html
@@ -69,15 +69,14 @@
       background-color: #1ebe5d;
     }
 
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1rem;
+    .avatar {
+      text-align: center;
+      margin-top: 2rem;
     }
 
-    .gallery img {
-      width: 100%;
-      border-radius: 10px;
+    .avatar img {
+      width: 220px;
+      border-radius: 50%;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
 
@@ -138,13 +137,8 @@
     </a>
   </section>
 
-  <section>
-    <h2>Galeria</h2>
-    <div class="gallery">
-      <img src="https://via.placeholder.com/400x300?text=Foto+1" alt="Exemplo de trabalho 1">
-      <img src="https://via.placeholder.com/400x300?text=Foto+2" alt="Exemplo de trabalho 2">
-      <img src="https://via.placeholder.com/400x300?text=Foto+3" alt="Exemplo de trabalho 3">
-    </div>
+  <section class="avatar">
+    <img src="https://cdn-icons-png.flaticon.com/512/5209/5209353.png" alt="Avatar costureira simpática">
   </section>
 
   <section class="testimonials">
