--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -138,7 +139,7 @@
   </section>
 
   <section class="avatar">
-    <img src="https://cdn-icons-png.flaticon.com/512/5209/5209353.png" alt="Avatar costureira simpática">
+    <img src="costureira-avatar.png" alt="Costureira simpática">
   </section>
 
   <section class="testimonials">
