--- a/index.html
+++ b/index.html
@@ -1,166 +1,87 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ateliê de Costuras</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
+  <title>Ateliê Ponto a Ponto</title>
   <style>
     body {
+      font-family: 'Arial', sans-serif;
+      background-color: #fff8f5;
       margin: 0;
-      font-family: 'Open Sans', sans-serif;
-      background: #fff8f5;
-      color: #333;
+      padding: 0;
+      text-align: center;
+      color: #444;
     }
 
     header {
-      background: #d4a5a5;
+      background-color: #c57ca4;
+      padding: 20px;
       color: white;
-      padding: 3rem 1rem;
-      text-align: center;
     }
 
-    header h1 {
-      font-family: 'Playfair Display', serif;
-      font-size: 3rem;
+    h1 {
       margin: 0;
+      font-size: 2.5em;
     }
 
-    header p {
-      margin-top: 0.5rem;
-      font-size: 1.2rem;
+    p {
+      font-size: 1.2em;
     }
 
-    section {
-      padding: 2rem 1rem;
-      max-width: 1000px;
-      margin: auto;
-    }
-
-    h2 {
-      font-family: 'Playfair Display', serif;
-      color: #c57ca4;
-      font-size: 2rem;
-      margin-bottom: 1rem;
-      text-align: center;
-    }
-
-    ul {
-      list-style: none;
-      padding: 0;
-      font-size: 1.1rem;
-      text-align: center;
-    }
-
-    .btn-whatsapp {
-      display: block;
-      margin: 2rem auto;
-      padding: 1rem 2rem;
-      background-color: #25D366;
-      color: white;
-      font-size: 1.2rem;
-      text-decoration: none;
-      border-radius: 8px;
-      width: fit-content;
-      transition: background 0.3s ease;
-    }
-
-    .btn-whatsapp:hover {
-      background-color: #1ebe5d;
+    .container {
+      padding: 40px 20px;
     }
 
     .avatar {
-      text-align: center;
-      margin-top: 2rem;
-    }
-
-    .avatar img {
-      width: 220px;
+      max-width: 250px;
       border-radius: 50%;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      margin-bottom: 20px;
     }
 
-    .testimonials {
-      background-color: #fceff3;
+    .btn-agendar {
+      display: inline-block;
+      background-color: #25D366;
+      color: white;
+      padding: 12px 25px;
+      text-decoration: none;
+      font-weight: bold;
       border-radius: 10px;
-      padding: 1rem;
+      font-size: 1.1em;
+      transition: 0.3s;
+      margin-top: 20px;
     }
 
-    .testimonial {
-      margin-bottom: 1.5rem;
-      font-style: italic;
-    }
-
-    iframe {
-      width: 100%;
-      height: 300px;
-      border: 0;
-      border-radius: 10px;
-      margin-top: 1rem;
+    .btn-agendar:hover {
+      background-color: #1ebe5d;
     }
 
     footer {
-      background: #f0e3ea;
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-      color: #666;
-    }
-
-    @media (max-width: 600px) {
-      header h1 {
-        font-size: 2.2rem;
-      }
-      h2 {
-        font-size: 1.5rem;
-      }
+      background-color: #f0d9e5;
+      padding: 20px;
+      margin-top: 40px;
     }
   </style>
 </head>
 <body>
-
   <header>
-    <h1>Ateliê de Costuras</h1>
-    <p>Consertos, ajustes e costuras personalizadas com carinho e qualidade!</p>
+    <h1>Ateliê Ponto a Ponto</h1>
+    <p>Ajustes, costuras e carinho em cada ponto</p>
   </header>
 
-  <section>
-    <h2>Serviços oferecidos</h2>
-    <ul>
-      <li>- Bainhas em calças e vestidos</li>
-      <li>- Ajustes de tamanho</li>
-      <li>- Troca de zíper</li>
-      <li>- Personalização de roupas</li>
-    </ul>
-    <a class="btn-whatsapp" href="https://wa.me/5551990114530?text=Olá,%20quero%20fazer%20um%20orçamento%20de%20costura!" target="_blank">
-      Fale conosco pelo WhatsApp
+  <div class="container">
+    <img src="costureira.png" alt="Costureira simpática" class="avatar" />
+    <p>Seja bem-vindo(a) ao nosso ateliê! Entre em contato e venha transformar suas peças favoritas conosco.</p>
+
+    <a href="https://wa.me/5551990114530?text=Ol%C3%A1!%20Gostaria%20de%20agendar%20um%20hor%C3%A1rio%20no%20ateli%C3%AA." 
+       class="btn-agendar" target="_blank">
+      Agendar Horário
     </a>
-  </section>
-
-  <section class="avatar">
-    <img src="costureira-avatar.png" alt="Costureira simpática">
-  </section>
-
-  <section class="testimonials">
-    <h2>Depoimentos</h2>
-    <div class="testimonial">"Ficou perfeito! Serviço rápido e de qualidade." - Maria</div>
-    <div class="testimonial">"Meu vestido ficou como novo! Muito obrigada pelo capricho." - Ana</div>
-    <div class="testimonial">"Atendimento excelente, recomendo demais!" - Juliana</div>
-  </section>
-
-  <section>
-    <h2>Onde estamos</h2>
-    <p style="text-align: center;">Rua Albion, 50 – Passo do Feijó, Alvorada - RS</p>
-    <iframe 
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3457.0071957077963!2d-51.083710524391404!3d-29.998026774654988!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951974d2f2087e65%3A0x5b6c8f8f07e64e4c!2sR.%20Albion%2C%2050%20-%20Passo%20do%20Feij%C3%B3%2C%20Alvorada%20-%20RS%2C%2094800-000!5e0!3m2!1spt-BR!2sbr!4v1712416512345" 
-      allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-    </iframe>
-  </section>
+  </div>
 
   <footer>
-    &copy; 2025 Ateliê de Costuras. Desenvolvido com carinho.
+    <p>Rua Albion, 50 – Passo do Feijó, Alvorada - RS</p>
+    <p>&copy; 2025 Ateliê Ponto a Ponto</p>
   </footer>
-
 </body>
 </html>
