--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </header>
 
   <div class="container">
-    <img src="costureira.png" alt="Costureira simpática" class="avatar" />
+    <img src="costureira-avatar.png" alt="Costureira simpática" class="avatar" />
     <p>Seja bem-vindo(a) ao nosso ateliê! Entre em contato e venha transformar suas peças favoritas conosco.</p>
 
     <a href="https://wa.me/5551990114530?text=Ol%C3%A1!%20Gostaria%20de%20agendar%20um%20hor%C3%A1rio%20no%20ateli%C3%AA." 
