--- a/index.html
+++ b/index.html
@@ -56,6 +56,25 @@
       background-color: #1ebe5d;
     }
 
+    .depoimentos {
+      background-color: #fef1f7;
+      padding: 40px 20px;
+    }
+
+    .depoimento {
+      font-style: italic;
+      margin: 20px auto;
+      max-width: 600px;
+    }
+
+    iframe {
+      width: 100%;
+      max-width: 600px;
+      height: 300px;
+      border: 0;
+      margin-top: 30px;
+    }
+
     footer {
       background-color: #f0d9e5;
       padding: 20px;
@@ -70,14 +89,23 @@
   </header>
 
   <div class="container">
-    <img src="costureira-avatar.png" alt="Costureira simpática" class="avatar" />
+    <img src="https://github.com/Dominique-Castro/Ateliier/blob/main/costureira-avatar.png?raw=true" alt="Costureira simpática" class="avatar" />
     <p>Seja bem-vindo(a) ao nosso ateliê! Entre em contato e venha transformar suas peças favoritas conosco.</p>
 
     <a href="https://wa.me/5551990114530?text=Ol%C3%A1!%20Gostaria%20de%20agendar%20um%20hor%C3%A1rio%20no%20ateli%C3%AA." 
        class="btn-agendar" target="_blank">
       Agendar Horário
     </a>
+
+    <iframe src="https://www.google.com/maps?q=Rua+Albion,+50,+Passo+do+Feijó,+Alvorada,+RS&output=embed"></iframe>
   </div>
+
+  <section class="depoimentos">
+    <h2>Depoimentos</h2>
+    <div class="depoimento">“Atendimento maravilhoso e muito capricho nos ajustes. Recomendo de olhos fechados!” – Carla M.</div>
+    <div class="depoimento">“Consertei um vestido que achei que não teria mais jeito. Ficou perfeito!” – Juliana S.</div>
+    <div class="depoimento">“Ateliê super acolhedor e serviço rápido. Adorei!” – Fernanda R.</div>
+  </section>
 
   <footer>
     <p>Rua Albion, 50 – Passo do Feijó, Alvorada - RS</p>
