--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ateliê Ponto a Ponto</title>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GNMGTXDFZE"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-GNMGTXDFZE');
+  </script>
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -102,7 +111,7 @@
     <img src="https://github.com/Dominique-Castro/Ateliier/blob/main/costureira-avatar.png?raw=true" alt="Costureira simpática" class="avatar" />
     <p>Seja bem-vindo(a) ao nosso ateliê! Entre em contato e venha transformar suas peças favoritas conosco.</p>
 
-    <iframe src="https://www.google.com/maps?q=Rua+Albion,+560,+Passo+do+Feijó,+Alvorada,+RS&output=embed"></iframe>
+    <iframe src="https://www.google.com/maps?q=Rua+Albion,+50,+Passo+do+Feijó,+Alvorada,+RS&output=embed"></iframe>
   </div>
 
   <section class="depoimentos">
@@ -118,7 +127,7 @@
   </section>
 
   <footer>
-    <p>Rua Albion, 560 – Passo do Feijó, Alvorada - RS</p>
+    <p>Rua Albion, 50 – Passo do Feijó, Alvorada - RS</p>
     <p>&copy; 2025 Ateliê Ponto a Ponto</p>
   </footer>
 </body>
